--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "mongoose": "^6.4.0",
     "multer": "^1.4.5-lts.1",
     "node-telegram-bot-api": "^0.58.0",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "qrcode-terminal": "^0.12.0",
+    "whatsapp-web.js": "^1.17.1"
   }
 }
